# procvision_sdk

./: .gitignore  .tmp_cli_run.json  CLAUDE.md  README.md  algorithm_dev_quickstart.md  algorithm_dev_tutorial.md  design-intent.md  protocol_adapter_spec.md  pyproject.toml  runner_spec.md  spec.md  spec_architecture_review.md  spec_review.md  spec_runner.md  tag-recreate.ps1
.archived/: ALGORITHM_PACKAGE_USAGE.md  ALGORITHM_TEST_STRATEGY.md  ARCHITECTURE_REVIEW_v0.2.0.md  ARCHITECTURE_REVIEW_v0.2.0_reviewed.md  CHANGELOG_v0.2.1.md  CODE_REVIEW.md  FIX_RETURN_VALUES_CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  REMOVE_DIAGNOSTICS_CHANGELOG.md  spec_multiple_pid.md
.github/: release.yml
.github/workflows/: sdk-build-and-publish.yml  wiki-sync-zh.yml
.trae/documents/: Execute-only 下 stdio 污染风险防护.md  修改 CLI run 为适配器子进程模式.md  在 README 增加 PID 说明章节（与 MOM_工艺联动）.md  完善钩子函数文档与示例.md  让 CLI package 支持随算法包一起打包 Python 运行时.md  适配 execute 新输入结构（step_desc_双图_guide_info）.md  采用原生共享内存替代临时文件（适配器模式）.md
algorithm-example/: manifest.json
algorithm-example/algorithm_example/: __init__.py  main.py
docs/: BUILD_CI.md  migration_guide_v0.2.0.md  migration_guide_v0.3.0.md
docs/release-notes/: v0.0.6.md  v0.2.0.md  v0.3.0.md
procvision_algorithm_sdk/: __init__.py  base.py  cli.py  errors.py  logger.py  session.py  shared_memory.py
procvision_algorithm_sdk/adapter/: __main__.py
sdk_sample/: manifest.json  requirements.txt
sdk_sample/pa_sample/: main.py
tests/: mock_phases_algo.py  test_adapter_phases.py  test_cli_validate.py  test_import.py
wiki/: 概述.md
wiki/CLI工具参考/: CLI工具参考.md  (+3 more)
(+115 files in other folders)
