[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procvision_algorithm_sdk"
version = "1.0.0"
description = "ProcVision algorithm SDK"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "ProcVision Team" }]
license = { text = "MIT" }
dependencies = ["numpy>=1.21"]

[project.scripts]
procvision-cli = "procvision_algorithm_sdk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["procvision_algorithm_sdk*"]